Order service updated to place order